[gd_scene load_steps=2 format=3 uid="uid://settings_scene"]

[ext_resource type="Script" path="res://scripts/settings_ui.gd" id="1_settings"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_settings")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "设置"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ServerSettings" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="Label" type="Label" parent="Panel/VBoxContainer/ServerSettings"]
layout_mode = 2
size_flags_vertical = 0
text = "WebSocket 服务端地址:"

[node name="WebSocketInput" type="LineEdit" parent="Panel/VBoxContainer/ServerSettings"]
layout_mode = 2
size_flags_vertical = 0
placeholder_text = "ws://localhost:8080"

[node name="ASRSettings" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="Label" type="Label" parent="Panel/VBoxContainer/ASRSettings"]
layout_mode = 2
size_flags_vertical = 0
text = "ASR 服务端地址:"

[node name="ASRInput" type="LineEdit" parent="Panel/VBoxContainer/ASRSettings"]
layout_mode = 2
size_flags_vertical = 0
placeholder_text = "ws://localhost:8000/api/v1/realtime"

[node name="Buttons" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
alignment = 1

[node name="SaveButton" type="Button" parent="Panel/VBoxContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
text = "保存"

[node name="CancelButton" type="Button" parent="Panel/VBoxContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
text = "取消"
